--- a/using/config.json
+++ b/using/config.json
@@ -37,16 +37,16 @@
   },
   {
     "uuid": "7b753e2a-bd68-4d68-bdd8-c356de4342b6",
-    "slug": "solving-exercises/locally",
-    "path": "using/solving-exercises/locally.md",
+    "slug": "solving-exercises/working-locally",
+    "path": "using/solving-exercises/working-locally.md",
     "title": "Solving Exercises Locally",
     "blurb": "Learn how to solve exercises on your local machine"
   },
   {
     "uuid": "d334a24f-43b5-4589-a1bb-977b40da2f62",
-    "slug": "solving-exercises/online",
-    "path": "using/solving-exercises/online.md",
+    "slug": "solving-exercises/using-the-online-editor",
+    "path": "using/solving-exercises/using-the-online-editor.md",
     "title": "Solving Exercises Online",
-    "blurb": "Learn how to solve exercises online"
+    "blurb": "Learn how to solve exercises using the Online Editor"
   }
 ]
