--- a/using/config.json
+++ b/using/config.json
@@ -32,21 +32,21 @@
     "uuid": "4e6b1af9-76e8-41d8-9cc2-92406f464a27",
     "slug": "solving-exercises",
     "path": "using/solving-exercises/README.md",
-    "title": "Learn how to solve exercises",
+    "title": "Solving exercises",
     "blurb": "Learn how to solve exercises on Exercism"
   },
   {
     "uuid": "7b753e2a-bd68-4d68-bdd8-c356de4342b6",
     "slug": "solving-exercises/working-locally",
     "path": "using/solving-exercises/working-locally.md",
-    "title": "Solving Exercises Locally",
+    "title": "Working Locally",
     "blurb": "Learn how to solve exercises on your local machine"
   },
   {
     "uuid": "d334a24f-43b5-4589-a1bb-977b40da2f62",
     "slug": "solving-exercises/using-the-online-editor",
     "path": "using/solving-exercises/using-the-online-editor.md",
-    "title": "Solving Exercises Online",
+    "title": "Using the online editor",
     "blurb": "Learn how to solve exercises using the Online Editor"
   }
 ]
