--- a/using/config.json
+++ b/using/config.json
@@ -88,7 +88,7 @@
     "uuid": "dd50a9c1-0c64-4c4c-b759-ad4af06c446f",
     "slug": "legal/accessibility",
     "path": "using/legal/accessibility.md",
-    "title": "Cookie Policy",
+    "title": "Accessibility Statement",
     "blurb": ""
   },
   {
