--- a/building/config.json
+++ b/building/config.json
@@ -616,5 +616,68 @@
     "path": "building/tooling/test-runners/interface.md",
     "title": "The Test Runner Interface",
     "blurb": ""
+  },
+  {
+    "uuid": "6a4b6d10-6750-41b7-aeac-e376e9f86857",
+    "slug": "product/reputation",
+    "path": "building/product/reputation.md",
+    "title": "Reputation",
+    "blurb": ""
+  },
+  {
+    "uuid": "5ec67720-4624-4edf-a268-16a12a2f6b46",
+    "slug": "product/credits",
+    "path": "building/product/credits.md",
+    "title": "Credits",
+    "blurb": ""
+  },
+  {
+    "uuid": "c1ca8b66-9ed3-4ad2-9695-b6f4732bed5f",
+    "slug": "product/tasks",
+    "path": "building/product/tasks.md",
+    "title": "Tasks",
+    "blurb": ""
+  },
+  {
+    "uuid": "619e5dfb-78ea-4f0c-8a2f-3dc6fc5314e0",
+    "slug": "product/tracks",
+    "path": "building/product/tracks.md",
+    "title": "General info",
+    "blurb": ""
+  },
+  {
+    "uuid": "62152557-504e-414f-a680-be4664ba5349",
+    "slug": "product/practice-exercises",
+    "path": "building/product/practice-exercises.md",
+    "title": "Practice Exercises",
+    "blurb": ""
+  },
+  {
+    "uuid": "9b8528ed-3e30-4884-b99e-52aae5446943",
+    "slug": "product/concept-exercises",
+    "path": "building/product/concept-exercises.md",
+    "title": "Concept Exercises",
+    "blurb": ""
+  },
+  {
+    "uuid": "672b118f-f1cc-4fff-a5c1-14ff9d5eb06f",
+    "slug": "product/test-runners",
+    "path": "building/product/test-runners.md",
+    "title": "Test Runners",
+    "blurb": ""
+  },
+  {
+    "uuid": "5a96a588-fefd-42a7-b9f5-84aadfd06948",
+    "slug": "product/representers",
+    "path": "building/product/representers.md",
+    "title": "Representers",
+    "blurb": ""
+  },
+  {
+    "uuid": "949a0c55-1217-4615-875f-b0c168ebd61c",
+    "slug": "product/analyzers",
+    "path": "building/product/analyzers.md",
+    "title": "Analyzers",
+    "blurb": ""
   }
 ]
