Private not friend

--- a/using/config.json
+++ b/using/config.json
@@ -30,10 +30,10 @@
   },
   {
     "uuid": "23d5a897-b6c3-4e17-99de-28f3480eeb85",
-    "slug": "feedback/from-a-friend",
-    "path": "using/feedback/from-a-friend.md",
-    "title": "Feedback from a friend",
-    "blurb": "Learn about getting feedback privately from a friend"
+    "slug": "feedback/private",
+    "path": "using/feedback/private.md",
+    "title": "Private Feedback",
+    "blurb": "Learn about getting feedback privately from a friend or colleague"
   },
   {
     "uuid": "4e6b1af9-76e8-41d8-9cc2-92406f464a27",
