--- a/mentoring/config.json
+++ b/mentoring/config.json
@@ -27,7 +27,7 @@
     "uuid": "57f323a6-29ea-43ef-9936-af44162ccc64",
     "section": "mentoring",
     "slug": "markdown",
-    "path": "mentoring/using-markdown.md",
+    "path": "mentoring/markdown.md",
     "title": "How to use Markdown in mentoring"
   }
 ]
