--- a/using/config.json
+++ b/using/config.json
@@ -17,7 +17,7 @@
   {
     "uuid": "bde7fcf8-e32f-40fb-9e7c-734f3ffe85ba",
     "slug": "settings/pronouns",
-    "path": "using/settings/pronouns",
+    "path": "using/settings/pronouns.md",
     "title": "Pronouns",
     "blurb": "Understand what pronouns are and why you might want to set them"
   },
