--- a/mentoring/config.json
+++ b/mentoring/config.json
@@ -20,7 +20,7 @@
     "section": "mentoring",
     "slug": "how-to-give-great-feedback",
     "path": "mentoring/how_to_give_great_feedback.md",
-    "title": "How to give great feeback",
+    "title": "How to give great feedback",
     "blurb": "You've chosen an exercise to mentor - now give some great feedback."
   },
   {
