--- a/using/config.json
+++ b/using/config.json
@@ -156,7 +156,7 @@
   },
   {
     "uuid": "6a4b6d10-6750-41b7-aeac-e376e9f86857",
-    "slug": "using/reputation",
+    "slug": "reputation",
     "path": "using/reputation.md",
     "title": "Reputation",
     "blurb": "Learn about the reputation system."
