--- a/using/config.json
+++ b/using/config.json
@@ -141,6 +141,13 @@
     "blurb": ""
   },
   {
+    "uuid": "883e60d2-50a7-480a-982a-39006cdc3442",
+    "slug": "fluency",
+    "path": "using/fluency.md",
+    "title": "Fluency",
+    "blurb": ""
+  },
+  {
     "uuid": "0db11048-891a-4bd1-8299-8119fdf20beb",
     "slug": "report-abuse",
     "path": "using/report-abuse.md",
