--- a/using/config.json
+++ b/using/config.json
@@ -162,6 +162,13 @@
     "blurb": "An assortment of commonly asked questions"
   },
   {
+    "uuid": "6a4b6d10-6750-41b7-aeac-e376e9f86857",
+    "slug": "reputation",
+    "path": "using/reputation.md",
+    "title": "Reputation",
+    "blurb": "Learn about the reputation system."
+  },
+  {
     "uuid": "142e218e-746d-4d00-80f5-df3c3ccb2392",
     "slug": "licenses",
     "path": "using/licenses/README.md",
