--- a/using/config.json
+++ b/using/config.json
@@ -216,5 +216,27 @@
     "path": "using/editions/teams.md",
     "title": "Exercism Teams Edition",
     "blurb": ""
+  },
+  {
+    "uuid": "8bca3c74-2c12-4d6b-8e89-98ce33a6c48f",
+    "section": "product",
+    "slug": "product",
+    "path": "using/product/README.md",
+    "title": "Product",
+    "blurb": "Learn about various aspects of Exercism"
+  },
+  {
+    "uuid": "883e60d2-50a7-480a-982a-39006cdc3442",
+    "slug": "product/fluency",
+    "path": "using/product/fluency.md",
+    "title": "Fluency",
+    "blurb": ""
+  },
+  {
+    "uuid": "6a4b6d10-6750-41b7-aeac-e376e9f86857",
+    "slug": "product/reputation",
+    "path": "using/product/reputation.md",
+    "title": "Reputation",
+    "blurb": "Learn about the reputation system."
   }
 ]
