--- a/building/config.json
+++ b/building/config.json
@@ -519,7 +519,7 @@
   },
   {
     "uuid": "def02ef0-a5ba-44b0-832c-7616d931da0c",
-    "slug": "tracks/new/request-new",
+    "slug": "tracks/new/join-community",
     "path": "building/tracks/new/join-community.md",
     "title": "Join our community"
   },
