--- a/building/config.json
+++ b/building/config.json
@@ -37,6 +37,32 @@
     "path": "building/configlet/generating-documents.md",
     "title": "Generating Documents"
   },
+  {
+    "uuid": "f6681966-9ece-43fc-a053-4b7bf9f0f25c",
+    "slug": "github",
+    "path": "building/github/README.md",
+    "title": "Contributing via GitHub"
+  },
+  {
+    "uuid": "2e4c9ffc-6441-45af-ad60-0ea76b1b80a9",
+    "slug": "github/contributors-pull-request-guide",
+    "path": "building/github/contributors-pull-request-guide",
+    "title": "Guide to Pull Requests for Contributors"
+  },
+  {
+    "uuid": "800f7e8a-2a9c-405d-ab11-936872792056",
+    "slug": "github/maintainers-pull-request-guide",
+    "path": "building/github/maintainers-pull-request-guide",
+    "title": "Guide to Pull Requests for Maintainers"
+  },
+  {
+    "uuid": "3945aaa4-60c4-4ae5-ae7c-aefc1718ce5c",
+    "slug": "tracks/stories",
+    "path": "building/tracks/stories/README.md",
+    "title": "Exercise stories"
+  },
+
+
 
   {
     "uuid": "53763218-17e2-44cc-bc8f-0c22260e9f7a",
