--- a/building/config.json
+++ b/building/config.json
@@ -41,7 +41,7 @@
     "uuid": "f6681966-9ece-43fc-a053-4b7bf9f0f25c",
     "slug": "github",
     "path": "building/github/README.md",
-    "title": "Contributing via GitHub"
+    "title": "GitHub"
   },
   {
     "uuid": "2e4c9ffc-6441-45af-ad60-0ea76b1b80a9",
