Add pull request guides (#323)
Add pull request guides

--- a/building/config.json
+++ b/building/config.json
@@ -37,7 +37,24 @@
     "path": "building/configlet/generating-documents.md",
     "title": "Generating Documents"
   },
-
+  {
+    "uuid": "f6681966-9ece-43fc-a053-4b7bf9f0f25c",
+    "slug": "github",
+    "path": "building/github/README.md",
+    "title": "GitHub"
+  },
+  {
+    "uuid": "2e4c9ffc-6441-45af-ad60-0ea76b1b80a9",
+    "slug": "github/contributors-pull-request-guide",
+    "path": "building/github/contributors-pull-request-guide.md",
+    "title": "Contributors Pull Request Guide"
+  },
+  {
+    "uuid": "800f7e8a-2a9c-405d-ab11-936872792056",
+    "slug": "github/maintainers-pull-request-guide",
+    "path": "building/github/maintainers-pull-request-guide.md",
+    "title": "Maintainers Pull Request Guide"
+  },
   {
     "uuid": "53763218-17e2-44cc-bc8f-0c22260e9f7a",
     "slug": "tracks",
