Add config entry

--- a/using/config.json
+++ b/using/config.json
@@ -134,6 +134,13 @@
     "blurb": ""
   },
   {
+    "uuid": "1e849668-6812-4562-8cf5-23d01746c004",
+    "slug": "legal/data-protection-policy",
+    "path": "using/legal/data-protection-policy.md",
+    "title": "Data Protection Policy",
+    "blurb": ""
+  },
+  {
     "uuid": "75735e59-f833-442a-92da-f88f76644736",
     "slug": "contact",
     "path": "using/contact.md",
