--- a/mentoring/config.json
+++ b/mentoring/config.json
@@ -45,5 +45,13 @@
     "path": "mentoring/faqs.md",
     "title": "Frequently asked mentoring questions",
     "blurb": "An assortment of commonly asked questions related to mentoring"
+  },
+  {
+    "uuid": "ba267f2d-8029-4449-a856-8bd7ebfacd2a",
+    "section": "mentoring",
+    "slug": "mentoring-mindset",
+    "path": "mentoring/mindset.md",
+    "title": "The Mentoring Mindset",
+    "blurb": "An examination of the mentoring mindset"
   }
 ]
