--- a/mentoring/config.json
+++ b/mentoring/config.json
@@ -49,7 +49,7 @@
   {
     "uuid": "ba267f2d-8029-4449-a856-8bd7ebfacd2a",
     "section": "mentoring",
-    "slug": "mentoring-mindset",
+    "slug": "mindset",
     "path": "mentoring/mindset.md",
     "title": "The Mentoring Mindset",
     "blurb": "An examination of the mentoring mindset"
