Add article to config.json

--- a/building/config.json
+++ b/building/config.json
@@ -821,6 +821,13 @@
     "blurb": ""
   },
   {
+    "uuid": "ba393f61-0f7d-4178-922a-c16cda052338",
+    "slug": "tooling/test-generators",
+    "path": "building/tooling/test-generators.md",
+    "title": "Test Generators",
+    "blurb": ""
+  },
+  {
     "uuid": "3423667a-3b30-4590-9a88-5a30f712f382",
     "slug": "product",
     "path": "building/product/README.md",
