Add forum links (#550)

--- a/building/config.json
+++ b/building/config.json
@@ -830,6 +830,13 @@
     "blurb": ""
   },
   {
+    "uuid": "0ab39b58-771e-42dc-aac9-e531bf43034e",
+    "slug": "tooling/test-runners/libraries",
+    "path": "building/tooling/test-runners/libraries.md",
+    "title": "Libraries",
+    "blurb": ""
+  },
+  {
     "uuid": "a9cf4712-9022-4bd2-83aa-55cbdfd62374",
     "slug": "tooling/lines-of-code-counter",
     "path": "building/tooling/lines-of-code-counter.md",
